--- a/localperl/lib/5.26.1/x86_64-linux/perllocal.pod
+++ b/localperl/lib/5.26.1/x86_64-linux/perllocal.pod
@@ -42,3 +42,47 @@ C<EXE_FILES: dbilogstrip dbiprof dbiproxy>
 
 =back
 
+=head2 Tue Nov 21 19:23:38 2017: C<Module> L<Test::Deep|Test::Deep>
+
+=over 4
+
+=item *
+
+C<installed into: /root/localperl/lib/site_perl/5.26.1>
+
+=item *
+
+C<LINKTYPE: dynamic>
+
+=item *
+
+C<VERSION: 1.127>
+
+=item *
+
+C<EXE_FILES: >
+
+=back
+
+=head2 Tue Nov 21 19:23:45 2017: C<Module> L<DBD::mysql|DBD::mysql>
+
+=over 4
+
+=item *
+
+C<installed into: /root/localperl/lib/site_perl/5.26.1>
+
+=item *
+
+C<LINKTYPE: dynamic>
+
+=item *
+
+C<VERSION: 4.043>
+
+=item *
+
+C<EXE_FILES: >
+
+=back
+
