execute : find . -type f -exec grep -Iq . {} \; -exec sed -i -e  's/\/root\/localperl/\.\/localperl/g' {} \; on localperl.

--- a/localperl/lib/5.26.1/x86_64-linux/perllocal.pod
+++ b/localperl/lib/5.26.1/x86_64-linux/perllocal.pod
@@ -4,7 +4,7 @@
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -26,7 +26,7 @@ C<EXE_FILES: bin/enc2xs bin/encguess bin/piconv>
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -48,7 +48,7 @@ C<EXE_FILES: dbilogstrip dbiprof dbiproxy>
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -70,7 +70,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -92,7 +92,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -114,7 +114,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -136,7 +136,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -158,7 +158,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -180,7 +180,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -202,7 +202,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -224,7 +224,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -246,7 +246,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -268,7 +268,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -290,7 +290,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -312,7 +312,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -334,7 +334,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -356,7 +356,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -378,7 +378,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -400,7 +400,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -422,7 +422,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -444,7 +444,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -466,7 +466,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -488,7 +488,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -510,7 +510,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -532,7 +532,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -554,7 +554,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -576,7 +576,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -598,7 +598,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -620,7 +620,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -642,7 +642,7 @@ C<EXE_FILES: bin/lwp-download bin/lwp-dump bin/lwp-mirror bin/lwp-request>
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -664,7 +664,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -686,7 +686,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -708,7 +708,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -730,7 +730,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -752,7 +752,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -774,7 +774,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -796,7 +796,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -818,7 +818,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -840,7 +840,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -862,7 +862,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -884,7 +884,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -906,7 +906,7 @@ C<EXE_FILES: bin/json_xs>
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -928,7 +928,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -950,7 +950,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -972,7 +972,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -994,7 +994,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
@@ -1016,7 +1016,7 @@ C<EXE_FILES: >
 
 =item *
 
-C<installed into: /root/localperl/lib/site_perl/5.26.1>
+C<installed into: ./localperl/lib/site_perl/5.26.1>
 
 =item *
 
